--- a/src/main/resources/shared/application.yml
+++ b/src/main/resources/shared/application.yml
@@ -10,7 +10,7 @@ security:
   oauth2:
     resource:
       user-info-uri: http://auth-service/uaa/users/current #which uri will be used to find the user
-
+      token-info-uri: http://localhost:8080/uaa/oauth/check_token
 logging:
   level:
     org.springframework: DEBUG
